--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
+html, body, #root {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +16,29 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  width: 80%;
+  max-width: 400px;
+}
+
+.list button {
+
+}
+
+.list button.active {
+
+}
+
+.list__item {
+  display: flex;
+  justify-content: stretch;
+}
+
+.list__item input[type="text"] {
+  flex: 1 0 auto;
 }
